--- a/custom/testapp/locale/ru/LC_MESSAGES/django.po
+++ b/custom/testapp/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-11 20:26+0300\n"
-"PO-Revision-Date: 2020-08-11 20:51+0300\n"
+"PO-Revision-Date: 2020-08-12 15:42+0300\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -159,7 +159,7 @@ msgstr "Сводная статистика для %(имя)s"
 #: templates/core/account_profile.html:88
 #: templates/core/account_profile.html:158
 msgid "It looks like you are not yet a customer."
-msgstr "Похоже, вы еще не клиент."
+msgstr "Похоже, вы еще не клиент нашей школы."
 
 #: templates/core/account_profile.html:93
 msgid "Basic Customer Information"
