--- a/custom/testapp/locale/uk/LC_MESSAGES/django.po
+++ b/custom/testapp/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-11 20:26+0300\n"
-"PO-Revision-Date: 2020-08-11 20:43+0300\n"
+"PO-Revision-Date: 2020-08-12 15:43+0300\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -164,7 +164,7 @@ msgstr "Зведена статистика для% (ім'я) s"
 #: templates/core/account_profile.html:88
 #: templates/core/account_profile.html:158
 msgid "It looks like you are not yet a customer."
-msgstr "Схоже, ви ще не є клієнтом."
+msgstr "Схоже, ви ще не є клієнтом нашої школи."
 
 #: templates/core/account_profile.html:93
 msgid "Basic Customer Information"
